--- a/contact.html
+++ b/contact.html
@@ -22,42 +22,56 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script type="text/javascript" src="js/xeditable.min.js"></script>
 	<script type="text/javascript" src="js/controller.js"></script>
 	<script type="text/javascript" src="js/directives.js"></script>
+
+
 <!--script-->
 </head>
-<body ng-controller="contactCtrl">
+<body ng-controller="revolutionCtrl">
 	<!--header-->
 	<header-revolution></header-revolution>
 	<!---->
 	<div class="container">
-		<!---->
-	 	<div class="main">
-	 <div class="reservation_top">
-			<div class=" contact_right">
-				<h3>Contact Form</h3>
-				<div class="contact-form">
-						<form method="post" action="contact-post.html">
-							<input type="text" class="textbox" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}">
-							<input type="text" class="textbox" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}">
-							<textarea value="Message" onfocus="this.value= '';" onblur="if (this.value == '') {this.value = 'Message';}">Message</textarea>
-							<input type="submit" value="Send">
-							<div class="clearfix"> </div>
-						</form>
-						<address class="address">
-				<p>9870 St Vincent Place, <br>Glasgow, DC 45 Fr 45.</p>
-				<dl>
-					<dt> </dt>
-					<dd>Freephone:<span> +1 800 254 2478</span></dd>
-					<dd>Telephone:<span> +1 800 547 5478</span></dd>
-					<dd>FAX: <span>+1 800 658 5784</span></dd>
-					<dd>E-mail:&nbsp; <a href="mailto@vintage.com">info(at)bigshop.com</a></dd>
-				</dl>
-			</address>
-					</div>
+		
+			<!---->
+		 <div class="main"> 
+         <div class="reservation_top">          
+            	<div class=" contact_right">
+            		<h3>Contact Form</h3>
+            		<div class="contact-form">
+							<form method="post" action="contact-post.html">
+								<input type="text" class="textbox" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}">
+								<input type="text" class="textbox" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}">
+								<textarea value="Message" onfocus="this.value= '';" onblur="if (this.value == '') {this.value = 'Message';}">Message</textarea>
+								<input type="submit" value="Send">
+								<div class="clearfix"> </div>
+							</form>
+							<address class="address">
+                    <p>9870 St Vincent Place, <br>Glasgow, DC 45 Fr 45.</p>
+                    <dl>
+                        <dt> </dt>
+                        <dd>Freephone:<span> +1 800 254 2478</span></dd>
+                        <dd>Telephone:<span> +1 800 547 5478</span></dd>
+                        <dd>FAX: <span>+1 800 658 5784</span></dd>
+                        <dd>E-mail:&nbsp; <a href="mailto@vintage.com">info(at)bigshop.com</a></dd>
+                    </dl>
+                </address>
+						</div>
+            	</div>
+            </div>
+           </div>
+		   <div class="sub-cate">
+				<categories-revolution></categories-revolution>
+					<div class=" chain-grid menu-chain">
+	   		     		<a href="single.html"><img class="img-responsive chain" src="images/wat.jpg" alt=" " /></a>	   		     		
+	   		     		<div class="grid-chain-bottom chain-watch">
+		   		     		<span class="actual dolor-left-grid">300$</span>
+		   		     		<span class="reducedfrom">500$</span>  
+		   		     		<h6>Lorem ipsum dolor</h6>  		     			   		     										
+	   		     		</div>
+	   		     	</div>
+	   		     	 <a class="view-all all-product" href="product.html">VIEW ALL PRODUCTS<span> </span></a> 	
 			</div>
-		</div>
-	   </div>
-	 	<categories-revolution></categories-revolution>
-	 </div>
+	     </div>
 	<!---->
 	<footer-revolution></footer-revolution>
 </body>
