--- a/product.html
+++ b/product.html
@@ -22,9 +22,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script type="text/javascript" src="js/xeditable.min.js"></script>
 	<script type="text/javascript" src="js/controller.js"></script>
 	<script type="text/javascript" src="js/directives.js"></script>
+
+
 <!--script-->
 </head>
-<body ng-controller="productCtrl">
+<body ng-controller="revolutionCtrl">
 	<!--header-->
 	<header-revolution></header-revolution>
 	<!---->
@@ -55,7 +57,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				   	   	<div class="mask">
 	                        <div class="info">Quick View</div>
 			            </div>
-                    </div>
 				   	  </a>
 				</div>
 				    <h4><a href="#"> Duis autem</a></h4>
@@ -70,7 +71,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				   	   	<div class="mask">
 	                        <div class="info">Quick View</div>
 			            </div>
-                    </div>
 				   	  </a>
 				   </div>
 				    <h4><a href="#"> Duis autem</a></h4>
@@ -85,7 +85,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				   	   	<div class="mask">
 	                        <div class="info">Quick View</div>
 			            </div>
-                    </div>
 				   	  </a>
 				   </div>
 				    <h4><a href="#"> Duis autem</a></h4>
@@ -93,99 +92,105 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				     Rs. 499
 			   	</div>
                  </div>
-        <div class="product-grid">
-			<div class="content_box">
-                <a href="single.html">
-			   	    <div class="left-grid-view grid-view-left">
-                        <img src="images/pic4.jpg" class="img-responsive watch-right" alt=""/>
+		  <div class="  product-grid">
+			<div class="content_box"><a href="single.html">
+			   	<div class="left-grid-view grid-view-left">
+			   	   	 <img src="images/pic4.jpg" class="img-responsive watch-right" alt=""/>
 				   	   	<div class="mask">
 	                        <div class="info">Quick View</div>
 			            </div>
-				    </div>
-				</a>
-            </div>
-            <h4><a href="#"> Duis autem</a></h4>
-            <p>It is a long established fact that a reader</p>
-            Rs. 499
-        </div>
-        <div class="product-grid">
-			<div class="content_box">
-                <a href="single.html">
-			   	    <div class="left-grid-view grid-view-left">
-                        <img src="images/pic6.jpg" class="img-responsive watch-right" alt=""/>
+				   	  </a>
+				   </div>
+				    <h4><a href="#"> Duis autem</a></h4>
+				     <p>It is a long established fact that a reader</p>
+				     Rs. 499
+			   	</div>
+              </div>
+			 <div class="  product-grid">
+			<div class="content_box"><a href="single.html">
+			   	<div class="left-grid-view grid-view-left">
+			   	   	 <img src="images/pic6.jpg" class="img-responsive watch-right" alt=""/>
 				   	   	<div class="mask">
 	                        <div class="info">Quick View</div>
 			            </div>
-					</div>
-                </a>
-            </div>
-            <h4><a href="#"> Duis autem</a></h4>
-            <p>It is a long established fact that a reader</p>
-            Rs. 499
-        </div>
-        <div class="product-grid">
-			<div class="content_box">
-                <a href="single.html">
-			   	    <div class="left-grid-view grid-view-left">
-			   	   	    <img src="images/pic7.jpg" class="img-responsive watch-right" alt=""/>
+				   	  </a>
+				   </div>
+				    <h4><a href="#"> Duis autem</a></h4>
+				     <p>It is a long established fact that a reader</p>
+				     Rs. 499
+			   	</div>
+                 </div>
+			 <div class="  product-grid">
+			<div class="content_box"><a href="single.html">
+			   	<div class="left-grid-view grid-view-left">
+			   	   	 <img src="images/pic7.jpg" class="img-responsive watch-right" alt=""/>
 				   	   	<div class="mask">
 	                        <div class="info">Quick View</div>
 			            </div>
-					</div>
-                </a>
-            </div>
-            <h4><a href="#"> Duis autem</a></h4>
-            <p>It is a long established fact that a reader</p>
-            Rs. 499
-        </div>
-        <div class="  product-grid">
-			<div class="content_box">
-                <a href="single.html">
-			   	    <div class="left-grid-view grid-view-left">
-                        <img src="images/pic8.jpg" class="img-responsive watch-right" alt=""/>
+				   	  </a>
+				   </div>
+				    <h4><a href="#"> Duis autem</a></h4>
+				     <p>It is a long established fact that a reader</p>
+				     Rs. 499
+			   	</div>
+                 </div>
+		  <div class="  product-grid">
+			<div class="content_box"><a href="single.html">
+			   	<div class="left-grid-view grid-view-left">
+			   	   	 <img src="images/pic8.jpg" class="img-responsive watch-right" alt=""/>
 				   	   	<div class="mask">
 	                        <div class="info">Quick View</div>
 			            </div>
-					</div>
-                </a>
-            </div>
-            <h4><a href="#"> Duis autem</a></h4>
-            <p>It is a long established fact that a reader</p>
-            Rs. 499
-        </div>
-        <div class="product-grid">
-			<div class="content_box">
-                <a href="single.html">
-                    <div class="left-grid-view grid-view-left">
-                        <img src="images/pic11.jpg" class="img-responsive watch-right" alt=""/>
-                        <div class="mask">
-                            <div class="info">Quick View</div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <h4><a href="#"> Duis autem</a></h4>
-            <p>It is a long established fact that a reader</p>
-            Rs. 499
-        </div>
-        <div class=" product-grid">
-			<div class="content_box">
-                <a href="single.html">
-			   	    <div class="left-grid-view grid-view-left">
-			   	   	    <img src="images/pic12.jpg" class="img-responsive watch-right" alt=""/>
-                        <div class="mask">
+				   	  </a>
+				   </div>
+				    <h4><a href="#"> Duis autem</a></h4>
+				     <p>It is a long established fact that a reader</p>
+				     Rs. 499
+			   	</div>
+              </div>
+			 <div class="  product-grid">
+			<div class="content_box"><a href="single.html">
+			   	<div class="left-grid-view grid-view-left">
+			   	   	 <img src="images/pic11.jpg" class="img-responsive watch-right" alt=""/>
+				   	   	<div class="mask">
 	                        <div class="info">Quick View</div>
 			            </div>
-					</div>
-                </a>
-            </div>
-            <h4><a href="#"> Duis autem</a></h4>
-            <p>It is a long established fact that a reader</p>
-            Rs. 499
-        </div>
-        <div class="clearfix"> </div>
+				   	  </a>
+				   </div>
+				    <h4><a href="#"> Duis autem</a></h4>
+				     <p>It is a long established fact that a reader</p>
+				     Rs. 499
+			   	</div>
+                 </div>
+			 <div class=" product-grid">
+			<div class="content_box"><a href="single.html">
+			   	<div class="left-grid-view grid-view-left">
+			   	   	 <img src="images/pic12.jpg" class="img-responsive watch-right" alt=""/>
+				   	   	<div class="mask">
+	                        <div class="info">Quick View</div>
+			            </div>
+				   	  </a>
+				   </div>
+				    <h4><a href="#"> Duis autem</a></h4>
+				     <p>It is a long established fact that a reader</p>
+				     Rs. 499
+			   	</div>
+                 </div>
+			<div class="clearfix"> </div>
+		</div>
 	</div>
-	<categories-revolution></categories-revolution>
+	<div class="sub-cate">
+				<categories-revolution></categories-revolution>
+					<div class=" chain-grid menu-chain">
+	   		     		<a href="single.html"><img class="img-responsive chain" src="images/wat.jpg" alt=" " /></a>	   		     		
+	   		     		<div class="grid-chain-bottom chain-watch">
+		   		     		<span class="actual dolor-left-grid">300$</span>
+		   		     		<span class="reducedfrom">500$</span>  
+		   		     		<h6>Lorem ipsum dolor</h6>  		     			   		     										
+	   		     		</div>
+	   		     	</div>
+	   		     	 <a class="view-all all-product" href="product.html">VIEW ALL PRODUCTS<span> </span></a> 	
+			</div>
 	<div class="clearfix"> </div>
 </div>
 	<!---->
