--- a/cart.html
+++ b/cart.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/xeditable.min.js"></script>
     <script type="text/javascript" src="js/firebase.js"></script>
+    <script type="text/javascript" src="js/angularfire.min.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
     <script type="text/javascript" src="js/directives.js"></script>
 </head>
@@ -37,7 +38,6 @@
                 <ul class="product-info-content">
                     <h3 class="restyle" editable-text="data[0].name"><b>{{ data[0].name }}</b></h3>
                     <h4 class="restyle" editable-text="data[0].id">{{ data[0].id }}</h4>
-                    <input class="check-choose" type="checkbox" ng-model="choose-check" name="" />
                     <table>
                         <tbody>
                         <tr>
