Update filestack change avatar

--- a/youraccount.html
+++ b/youraccount.html
@@ -19,6 +19,8 @@
     <script type="text/javascript" src="js/xeditable.min.js"></script>
     <script type="text/javascript" src="js/firebase.js"></script>
     <script type="text/javascript" src="js/angularfire.min.js"></script>
+    <script type="text/javascript"
+            src="//api.filestackapi.com/filestack.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
     <script type="text/javascript" src="js/directives.js"></script>
 </head>
@@ -30,8 +32,8 @@
     <div class="profile_grid" ng-controller="ProfileController as profileCtrl">
         <div id="profile-resume">
             <div class="profile-avatar">
-                <img class="avatar" width="240px" height="240px"
-                     src="images/avatar.jpg" />
+                <imagepicker></imagepicker>
+                <img ng-src="{{urlImg}}"/>
             </div>
             <div class="profile-info">
                 <ul class="profile-info-content">
