--- a/single.html
+++ b/single.html
@@ -26,7 +26,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script type="text/javascript" src="js/angularfire.min.js"></script>
 	<script type="text/javascript" src="js/controller.js"></script>
 	<script type="text/javascript" src="js/directives.js"></script>
-
+    <!--Thư viện cho color picker-->
+    <script src="js/jscolor.js"></script>
+    <!--Them thu vien-->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="js/jquery.etalage.min.js"></script>
 <script>
 			jQuery(document).ready(function($){
@@ -84,7 +89,58 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
 				<div class="cart-b">
 					<div class="left-n ">$329.58</div>
-				    <a class="now-get get-cart-in" href="#">ADD TO CART</a> 
+				    <a class="now-get get-cart-in" data-toggle="modal" data-target="#myModal">ADD TO CART</a>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="myModal" role="dialog">
+                        <div class="modal-dialog">
+
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Add to cart</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <table style="font-family: 'Helvetica Neue';font-size: 20px">
+                                        <tr>
+                                            <td width="100px"><span>Số lượng</span></td>
+                                            <td><input ng-change="testquantity()" type="number" style="width: 100px" ng-model="quantity" min="0" max="99" required/></td>
+                                        </tr>
+
+                                        <tr>
+                                            <td><span>Size</span></td>
+                                            <td height="60px">
+                                                <select style="width: 100px">
+                                                <option value="S">S</option>
+                                                <option value="M">M</option>
+                                                <option value="L">L</option>
+                                                <option value="XL">XL</option>
+                                                <option value="XXL">XXL</option>
+                                            </select>
+                                            </td>
+                                        </tr>
+
+                                        <tr >
+                                            <td><span>Màu</span></td>
+                                            <td><input style="width: 100px" type="color" name="favcolor" value="#ff0000"></td>
+                                        </tr>
+                                    </table>
+                                    <div style="float: right">
+                                        <span>Thành tiền</span>
+                                    </div>
+
+
+
+
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Save</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
 				    <div class="clearfix"></div>
 				 </div>
 				 <h6>100 items in stock</h6>
@@ -144,7 +200,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				     	<p class="m_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
 				     </div>	
           	   </div>
-          	   
+
           	   <!---->
 <div class="sub-cate">
 				<categories-revolution></categories-revolution>
@@ -158,7 +214,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	   		     	</div>
 	   		     	 <a class="view-all all-product" href="product.html">VIEW ALL PRODUCTS<span> </span></a> 	
 			</div>
-<div class="clearfix"> </div>			
+<div class="clearfix"> </div>
 		</div>
 	<!---->
 	<footer-revolution></footer-revolution>
