Update Main Project
+ Mix all template
+ Component with Route
+ Data

--- a/cart.html
+++ b/cart.html
@@ -18,9 +18,13 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/xeditable.min.js"></script>
     <script type="text/javascript" src="js/firebase.js"></script>
+    <script type="text/javascript" src="js/angular-route.js"></script>
     <script type="text/javascript" src="js/angularfire.min.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
     <script type="text/javascript" src="js/directives.js"></script>
+    <script type="text/javascript" src="js/components.js"></script>
+    <script type="text/javascript" src="js/jquery.flexisel.js"></script>
+    <script src="js/jquery.etalage.min.js"></script>
 </head>
 <body ng-controller="RevolutionController">
 <!--header-->
