--- a/product.html
+++ b/product.html
@@ -33,6 +33,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="js/jquery.etalage.min.js"></script>
+	<link type="text/css" rel="stylesheet" href="css/etalage.css" />
 	<!--script-->
 </head>
 <body ng-controller="RevolutionController">
