Update Product Interface
Handler Products Show

--- a/login.html
+++ b/login.html
@@ -48,6 +48,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span>Password<label>*</label></span>
 					<input type="text" name="passwordLogin" ng-model="passwordLogin" required>
 				</div>
+				<h3 style="color: red;" ng-show="checkEmailPass">WRONG EMAIL OR PASSWORD!!</h3>
 				<a class="forgot" href="#">Forgot Your Password?</a>
 				<input type="submit" value="Login">
 				<input class="btnfacebook" style="
