--- a/youraccount.html
+++ b/youraccount.html
@@ -36,7 +36,7 @@
         <div id="profile-resume">
             <div class="profile-avatar">
                 <image-picker></image-picker>
-                <img class="avatar" width="240px" height="240px" ng-src="{{urlImg}}" />
+                <img class="avatar" width="240px" height="240px" ng-src="{{ dataUser.avatar }}" />
             </div>
             <div class="profile-info">
                 <ul class="profile-info-content">
