--- a/product.html
+++ b/product.html
@@ -10,6 +10,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<title>Big shope A Ecommerce Category Flat Bootstarp Resposive Website Template | Product :: w3layouts</title>
 	<meta http-equiv="Content-Type" charset="utf-8">
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="css/etalage.css" rel="stylesheet" type="text/css" media="all" />
 	<!--theme-style-->
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<!--//theme-style-->
@@ -33,7 +34,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="js/jquery.etalage.min.js"></script>
-	<link type="text/css" rel="stylesheet" href="css/etalage.css" />
 	<!--script-->
 </head>
 <body ng-controller="RevolutionController">
