--- a/register.html
+++ b/register.html
@@ -18,8 +18,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!--fonts-->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 	<!--//fonts-->
-	<script type="text/javascript" src="js/angular.min.js"></script>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/angular.min.js"></script>
 	<script type="text/javascript" src="js/xeditable.min.js"></script>
 	<script type="text/javascript" src="js/firebase.js"></script>
 	<script type="text/javascript" src="js/angular-route.js"></script>
@@ -29,6 +29,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script type="text/javascript" src="js/components.js"></script>
 	<script type="text/javascript" src="js/jquery.flexisel.js"></script>
 	<script src="js/jquery.etalage.min.js"></script>
+	<script type="text/javascript" src="js/ng-infinite-scroll.min.js"></script>
+	<script type="text/javascript" src="js/dirPagination.js"></script>
 </head>
 <body ng-controller="RevolutionController">
 <!--header-->
@@ -65,7 +67,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 			</div>
 			<div class="register-but">
-				<input type="submit" value="submit">
+				<input style="background-color: #46b8da; border: none; padding: 10px; font-family: Helvetica Neue; font-style: italic"width="100px"
+					   height="80px" type="submit" value="ĐĂNG KÝ">
 				<div class="clearfix"> </div>
 			</div>
 		</form>
