--- a/single.html
+++ b/single.html
@@ -19,8 +19,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!--fonts-->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 	<!--//fonts-->
-	<script type="text/javascript" src="js/angular.min.js"></script>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/angular.min.js"></script>
 	<script type="text/javascript" src="js/xeditable.min.js"></script>
 	<script type="text/javascript" src="js/firebase.js"></script>
 	<script type="text/javascript" src="js/angular-route.js"></script>
@@ -29,11 +29,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script type="text/javascript" src="js/directives.js"></script>
 	<script type="text/javascript" src="js/components.js"></script>
 	<script type="text/javascript" src="js/jquery.flexisel.js"></script>
+	<script type="text/javascript" src="js/ng-infinite-scroll.min.js"></script>
 	<!--Add thu vien-->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="js/jquery.etalage.min.js"></script>
+	<script type="text/javascript" src="js/dirPagination.js"></script>
 
 </head>
 <body ng-controller="RevolutionController">
