Update Fix Error
Sửa lỗi đăng kí + Load Cart

--- a/cart.html
+++ b/cart.html
@@ -50,7 +50,7 @@
             <div class="product-info" ng-show="!cart.status">
                 <ul class="product-info-content">
                     <!-- THAY ĐỔI -->
-                    <a class="now-get get-cart-in" data-toggle="modal" ng-click="saveUpdateProduct(cart.$id, cart.size, cart.quantity)" data-target="#myModal"><span class="glyphicon glyphicon-pencil size"></span></a>
+                    <a class="now-get get-cart-in" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-pencil size"></span></a>
                     <!-- Modal -->
                     <div class="modal fade" id="myModal" role="dialog">
                         <div class="modal-dialog">
