--- a/register.html
+++ b/register.html
@@ -61,9 +61,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<h3>LOGIN INFORMATION</h3>
 				<div class="mation">
 					<span>Password<label>*</label></span>
-					<input type="text" name="passwordRegister" ng-model="passwordRegister" required>
+					<input type="password" name="passwordRegister" ng-model="passwordRegister" required>
 					<span>Confirm Password<label>*</label></span>
-					<input type="text" name="rePasswordRegister" ng-model="rePasswordRegister" required>
+					<input type="password" name="rePasswordRegister" ng-model="rePasswordRegister" required>
 				</div>
 			</div>
 			<div class="register-but">
