--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <!--theme-style-->
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <!-- my style -->
+    <link href="css/mycss.css" rel="stylesheet" type="text/css" />
     <!--//theme-style-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -31,6 +33,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <script src="js/jquery.etalage.min.js"></script>
     <script type="text/javascript" src="js/ng-infinite-scroll.min.js"></script>
     <script type="text/javascript" src="js/dirPagination.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
     <!--script-->
 </head>
 <body ng-controller="RevolutionController">
@@ -39,7 +42,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!---->
 <div class="container">
     <div class="shoes-grid">
-        <a href="single.html">
+        <a href="#">
             <div class="wrap-in">
                 <div class="wmuSlider example1 slide-grid">
                     <div class="wmuSliderWrapper">
@@ -108,7 +111,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </a>
 <!---->
 <div class="shoes-grid-left">
-    <a href="single.html">
+    <a href="#">
         <div class="col-md-6 con-sed-grid">
 
             <div class=" elit-grid">
@@ -124,7 +127,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
         </div>
     </a>
-    <a href="single.html">
+    <a href="#">
         <div class="col-md-6 con-sed-grid sed-left-top">
             <div class=" elit-grid">
                 <h4>consectetur  elit</h4>
@@ -144,10 +147,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 <div class="product-left">
     <div class="col-md-4 chain-grid">
-        <a href="single.html"><img class="img-responsive chain" src="images/ch.jpg" alt=" " /></a>
+        <a href="#"><img class="img-responsive chain" src="images/ch.jpg" alt=" " /></a>
         <span class="star"> </span>
         <div class="grid-chain-bottom">
-            <h6><a href="single.html">Lorem ipsum dolor</a></h6>
+            <h6><a href="#">Lorem ipsum dolor</a></h6>
             <div class="star-price">
                 <div class="dolor-grid">
                     <span class="actual">300$</span>
@@ -171,10 +174,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
     </div>
     <div class="col-md-4 chain-grid">
-        <a href="single.html"><img class="img-responsive chain" src="images/ba.jpg" alt=" " /></a>
+        <a href="#"><img class="img-responsive chain" src="images/ba.jpg" alt=" " /></a>
         <span class="star"> </span>
         <div class="grid-chain-bottom">
-            <h6><a href="single.html">Lorem ipsum dolor</a></h6>
+            <h6><a href="#">Lorem ipsum dolor</a></h6>
             <div class="star-price">
                 <div class="dolor-grid">
                     <span class="actual">300$</span>
@@ -198,10 +201,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
     </div>
     <div class="col-md-4 chain-grid grid-top-chain">
-        <a href="single.html"><img class="img-responsive chain" src="images/bo.jpg" alt=" " /></a>
+        <a href="#"><img class="img-responsive chain" src="images/bo.jpg" alt=" " /></a>
         <span class="star"> </span>
         <div class="grid-chain-bottom">
-            <h6><a href="single.html">Lorem ipsum dolor</a></h6>
+            <h6><a href="#">Lorem ipsum dolor</a></h6>
             <div class="star-price">
                 <div class="dolor-grid">
                     <span class="actual">300$</span>
@@ -232,10 +235,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 <div class="product-left">
     <div class="col-md-4 chain-grid">
-        <a href="single.html"><img class="img-responsive chain" src="images/bott.jpg" alt=" " /></a>
+        <a href="#"><img class="img-responsive chain" src="images/bott.jpg" alt=" " /></a>
         <span class="star"> </span>
         <div class="grid-chain-bottom">
-            <h6><a href="single.html">Lorem ipsum dolor</a></h6>
+            <h6><a href="#">Lorem ipsum dolor</a></h6>
             <div class="star-price">
                 <div class="dolor-grid">
                     <span class="actual">300$</span>
@@ -259,10 +262,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
     </div>
     <div class="col-md-4 chain-grid">
-        <a href="single.html"><img class="img-responsive chain" src="images/bottle.jpg" alt=" " /></a>
+        <a href="#"><img class="img-responsive chain" src="images/bottle.jpg" alt=" " /></a>
         <span class="star"> </span>
         <div class="grid-chain-bottom">
-            <h6><a href="single.html">Lorem ipsum dolor</a></h6>
+            <h6><a href="#">Lorem ipsum dolor</a></h6>
             <div class="star-price">
                 <div class="dolor-grid">
                     <span class="actual">300$</span>
@@ -286,10 +289,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
     </div>
     <div class="col-md-4 chain-grid grid-top-chain">
-        <a href="single.html"><img class="img-responsive chain" src="images/baa.jpg" alt=" " /></a>
+        <a href="#"><img class="img-responsive chain" src="images/baa.jpg" alt=" " /></a>
         <span class="star"> </span>
         <div class="grid-chain-bottom">
-            <h6><a href="single.html">Lorem ipsum dolor</a></h6>
+            <h6><a href="#">Lorem ipsum dolor</a></h6>
             <div class="star-price">
                 <div class="dolor-grid">
                     <span class="actual">300$</span>
@@ -319,11 +322,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="sub-cate">
     <categories-revolution></categories-revolution>
     <div class=" chain-grid menu-chain">
-        <a href="single.html"><img class="img-responsive chain" src="images/wat.jpg" alt=" " /></a>
+        <a href="#"><img class="img-responsive chain" src="images/wat.jpg" alt=" " /></a>
         <div class="grid-chain-bottom chain-watch">
             <span class="actual dolor-left-grid">300$</span>
             <span class="reducedfrom">500$</span>
-            <h6><a href="single.html">Lorem ipsum dolor</a></h6>
+            <h6><a href="#">Lorem ipsum dolor</a></h6>
         </div>
     </div>
     <a class="view-all all-product" href="product.html">VIEW ALL PRODUCTS<span> </span></a>
