--- a/single.html
+++ b/single.html
@@ -9,6 +9,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
 	<title>Big shope A Ecommerce Category Flat Bootstarp Resposive Website Template | Single :: w3layouts</title>
 	<meta http-equiv="Content-Type" charset="utf-8">
+	<!-- my style -->
+	<link href="css/mycss.css" rel="stylesheet" type="text/css" />
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<!--theme-style-->
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -36,6 +38,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="js/jquery.etalage.min.js"></script>
 	<script type="text/javascript" src="js/dirPagination.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
 
 </head>
 <body ng-controller="RevolutionController">
