--- a/cart.html
+++ b/cart.html
@@ -27,6 +27,7 @@
     <script src="js/jquery.etalage.min.js"></script>
     <script type="text/javascript" src="js/ng-infinite-scroll.min.js"></script>
     <script type="text/javascript" src="js/dirPagination.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
     <!--Add thu vien-->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -50,11 +51,11 @@
             <div class="product-info" ng-show="!cart.status">
                 <ul class="product-info-content">
                     <!-- THAY ĐỔI -->
-                    <a class="now-get get-cart-in" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-pencil size"></span></a>
+                    <a class="now-get get-cart-in" ng-click="showProduct($index)" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-pencil size"></span></a>
                     <!-- Modal -->
                     <div class="modal fade" id="myModal" role="dialog">
                         <div class="modal-dialog">
-                            <!-- MODAL -->
+                             MODAL
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -106,6 +107,41 @@
                 </ul>
             </div>
         </div>
+        <!-- Modal -->
+        <!--<div class="modal fade" id="myModal" role="dialog">-->
+            <!--<div class="modal-dialog">-->
+                <!--&lt;!&ndash; MODAL &ndash;&gt;-->
+                <!--<div class="modal-content">-->
+                    <!--<div class="modal-header">-->
+                        <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
+                        <!--<h4 class="modal-title">{{ ProductInfo.name }}</h4>-->
+                    <!--</div>-->
+                    <!--<div class="modal-body">-->
+                        <!--<form style="font-family: 'Helvetica Neue';font-size: 20px" name="cartProductForm">-->
+                            <!--<tr>-->
+                                <!--<td width="20px"><span>Số lượng</span>-->
+                                <!--</td>-->
+                                <!--<td>-->
+                                    <!--<input type="number" id="number" value="1" style="width: 100px" ng-model="cart.quantity" min="1" max="1000" required/>-->
+                                <!--</td>-->
+                            <!--</tr>-->
+                            <!--<tr>-->
+                                <!--<td><span>Size</span>-->
+                                <!--</td>-->
+                                <!--<td height="60px">-->
+                                    <!--<input ng-model="cart.size" type="text" id="sizeProduct" ng-model="sizeProduct" style="width: 100px" required/>-->
+                                <!--</td>-->
+                            <!--</tr>-->
+                            <!--<div style="float: right"> <span>Thành tiền {{ ProductInfo.cost * cart.quantity | currency }}</span>-->
+                            <!--</div>-->
+                            <!--<div class="modal-footer">-->
+                                <!--<button ng-click="saveUpdateProduct(cart.$id, cart.size, cart.quantity)" type="submit" class="btn btn-default" data-dismiss="modal">Save</button>-->
+                            <!--</div>-->
+                        <!--</form>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
         <div style="margin: 30px">
             <div>
                 <a class="now-get get-cart-in" ng-click="allbuy(carts)">MUA TẤT CẢ</a>
