--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<title>Big shope A Ecommerce Category Flat Bootstarp Resposive Website Template | Contact :: w3layouts</title>
 	<meta http-equiv="Content-Type" charset="utf-8">
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+	<!-- my style -->
+	<link href="css/mycss.css" rel="stylesheet" type="text/css" />
 	<!--theme-style-->
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<!--//theme-style-->
@@ -31,6 +33,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src="js/jquery.etalage.min.js"></script>
 	<script type="text/javascript" src="js/ng-infinite-scroll.min.js"></script>
 	<script type="text/javascript" src="js/dirPagination.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
 	<!--script-->
 </head>
 <body ng-controller="RevolutionController">
