--- a/youraccount.html
+++ b/youraccount.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="//api.filestackapi.com/filestack.js"></script>
     <script type="text/javascript" src="js/ng-infinite-scroll.min.js"></script>
     <script type="text/javascript" src="js/dirPagination.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
 </head>
 <body ng-controller="AccountController">
 <!--header-->
